Fix: Update attribution to Matt Vaughn with LinkedIn
- Change GitHub links to mwvaughn/reachy_mini_language_tutor fork
- Add LinkedIn link to footer (https://www.linkedin.com/in/mattdotvaughn/)
- Update main attribution from Pollen Robotics to Matt Vaughn
- Keep Pollen Robotics credit for Reachy Mini robot hardware
- Remove HuggingFace Spaces link (not relevant for personal fork)

Attribution now properly credits Matt Vaughn for the language tutor app
while acknowledging Pollen Robotics for the robot hardware.

--- a/index.html
+++ b/index.html
@@ -888,7 +888,7 @@
                 <a href="#features">Features</a>
                 <a href="#install">Get Started</a>
                 <a href="#tutors">Tutors</a>
-                <a href="https://github.com/pollen-robotics/reachy_mini_language_tutor" target="_blank">GitHub</a>
+                <a href="https://github.com/mwvaughn/reachy_mini_language_tutor" target="_blank">GitHub</a>
             </div>
         </nav>
 
@@ -1171,14 +1171,14 @@ reachy-mini-language-tutor --profile spanish_tutor --gradio</code>
                 <div class="footer-logo">🗣️ Reachy Language Partner</div>
 
                 <div class="footer-links">
-                    <a href="https://github.com/pollen-robotics/reachy_mini_language_tutor" target="_blank">GitHub</a>
+                    <a href="https://github.com/mwvaughn/reachy_mini_language_tutor" target="_blank">GitHub</a>
+                    <a href="https://www.linkedin.com/in/mattdotvaughn/" target="_blank">LinkedIn</a>
                     <a href="https://github.com/pollen-robotics" target="_blank">Pollen Robotics</a>
-                    <a href="https://huggingface.co/spaces/pollen-robotics/Reachy_Mini_Apps" target="_blank">HuggingFace Spaces</a>
                 </div>
 
                 <p class="footer-text">
-                    Reachy Language Partner by <a href="https://github.com/pollen-robotics" target="_blank">Pollen Robotics</a><br>
-                    Licensed under Apache 2.0 • Open Source
+                    Reachy Language Partner by <a href="https://www.linkedin.com/in/mattdotvaughn/" target="_blank">Matt Vaughn</a><br>
+                    Reachy Mini robot by <a href="https://github.com/pollen-robotics" target="_blank">Pollen Robotics</a> • Licensed under Apache 2.0
                 </p>
             </div>
         </div>
