Content: Update headline to 'Friendly Robot Companion'
Changed from 'Your Expressive Robot Companion' to 'a Friendly Robot Companion'
for a more welcoming, approachable tone.

--- a/index.html
+++ b/index.html
@@ -899,8 +899,8 @@
             </div>
 
             <h1>
-                Practice Languages with Your<br>
-                <span class="gradient-text">Expressive Robot Companion</span>
+                Practice Languages with a<br>
+                <span class="gradient-text">Friendly Robot Companion</span>
             </h1>
 
             <p class="hero-subtitle">
